<resources>
    <string name="app_name">RemindBuddy</string>
    <string name="app_display_name">Remind Buddy</string>
    <string name="login">Password</string>
    <string name="pin">PIN</string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="sharedPreference">com.example.remindbuddy</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Location</string>

    <string name="menu_home">My List</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Planned</string>
    <string name="logout">Logout</string>

    <string name="dbFileName">com.mobicomp2021.reminderbuddy</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_current_location_map">Map</string>
</resources>